# Polymarket-Market-Making-Bot

./: .env.example  .gitignore  README.md  config.example.toml  design-qa.md  pyproject.toml
deploy/: install-vps.sh  polymarket-mm-bot.service
poly_mm/: __init__.py  client.py  config.py  console.py  discovery.py  engine.py  journal.py  main.py  models.py  risk.py  strategy.py  web.py
poly_mm/web_static/: app.js  index.html  styles.css
tests/: test_client.py  test_config.py  test_console.py  test_deploy.py  test_discovery.py  test_engine.py  test_journal.py  test_preflight.py  test_strategy.py  test_web.py  test_web_static.py
