[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-market-maker"
version = "0.1.0"
description = "Passive market maker for Polymarket CLOB with live-trading safeguards."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32,<3",
  "py-clob-client-v2>=1.1.0,<2",
  "websockets>=15,<16",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.8"]

[tool.setuptools.packages.find]
include = ["poly_mm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
